# huldra

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  TODO.md  migration.md  openapi.json  progress.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
dashboard-frontend/: index.html  orval.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
dashboard-frontend/src/: api.test.ts  index.css  main.tsx
e2e/: generate_data.py  global-setup.ts  global-teardown.ts  package.json  playwright.config.ts
e2e/tests/: api.spec.ts  experiments.spec.ts  home.spec.ts  navigation.spec.ts
examples/: README.md  run_logging.py  run_nested.py  run_train.py
plans/: dependency_discovery.md  executor.md  migration.md
plans/executor-fix-v2/: plan.md  (+11 more)
tasks/: migration.md
tests/: conftest.py  test_config.py  test_dashboard_spa_security.py  test_dashboard_version.py  test_efficiency.py  test_errors.py  test_execution_imports.py  test_execution_plan.py  test_executor_context.py  test_furu_core.py  test_furu_dependencies.py  test_furu_inheritance.py  test_furu_inheritance_polymorphic.py  test_furu_typing.py  test_huldra_core.py  test_huldra_inheritance.py  test_huldra_inheritance_polymorphic.py  test_huldra_list.py  test_huldra_typing.py  test_local_executor.py  test_logger.py  test_metadata.py  test_migrations.py  test_raw_dir.py  test_serializer.py  test_slurm_dag.py  test_slurm_pool.py  test_state_manager.py  test_submitit_jobid_race.py  test_submitit_path.py  test_testing_helpers.py  test_tracebacks.py
(+145 files in other folders)
