[project]
name = "huldra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Herman Brunborg", email = "herman@brunborg.com" }
]
requires-python = ">=3.12"
dependencies = [
    "chz>=0.3.0",
    "cloudpickle>=3.1.1",
    "python-dotenv>=1.0.0",
    "rich>=14.2.0",
    "submitit>=1.5.3",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"
