[project]
name = "huldra"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Herman Brunborg", email = "herman@brunborg.com" }
]
requires-python = ">=3.12"
dependencies = [
    "chz>=0.4.0",
    "cloudpickle>=3.1.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.0.0",
    "rich>=14.2.0",
    "submitit>=1.5.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.9",
    "ty>=0.0.1a34",
]
test = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra"]
